<resources>
    <string name="app_name">LidlSplit</string>
    <string name="title_purchases">Einkäufe</string>
    <string name="title_people">Personen</string>
    <string name="add_purchase">+ Einkauf hinzufügen</string>
    <string name="add_person">+ Person hinzufügen</string>
    <string name="filter">Filter</string>
    <string name="dialog_add_person_title">Person hinzufügen</string>
    <string name="dialog_edit_person_title">Person bearbeiten</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete">Löschen</string>
    <string name="confirm_delete_person">Möchtest du diese Person wirklich löschen?</string>
    <string name="hint_person_name">Name</string>
    <string name="title_new_purchase">Neuer Einkauf</string>
    <string name="upload_receipt">Upload Kassenbon</string>
    <string name="checkbox_paid">bezahlt</string>
    <string name="create_invoice">Rechnung erstellen</string>
    <string name="invoice_title">Rechnung</string>
    <string name="error_choose_payer">Bitte wähle die zahlende Person aus.</string>
    <string name="error_assign_person">Bitte weise allen Artikeln mindestens eine Person zu.</string>
    <string name="dialog_select_persons_title">Personen auswählen</string>
    <string name="total_label">Gesamt: %1$.2f€</string>
    <string name="invoice_settled">beglichen</string>
    <string name="save_invoice">Rechnung speichern</string>
    <string name="confirm_delete_purchase">Möchtest du diesen Einkauf wirklich löschen?</string>
    <string name="edit_purchase_title">Einkauf bearbeiten</string>
    <string name="save_changes">Änderungen speichern</string>
    <string name="sort_date">Datum</string>
    <string name="sort_amount">Betrag</string>
    <string name="filter_apply">Filter anwenden</string>
    <string name="filter_reset">Filter löschen</string>
    <string name="start_date">Startdatum</string>
    <string name="end_date">Enddatum</string>
    <string name="status_all">alle</string>
    <string name="status_open">offen</string>
    <string name="status_paid">bezahlt</string>
</resources>
